--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.10"
 requests = "^2.32.3"
 pandas = "^2.2.2"
-numpy = "^2.1.0"
+numpy = "^2.0"
 scikit-learn = "^1.5.1"
 beautifulsoup4 = "^4.12.3"
 sqlalchemy = "^2.0.32"
@@ -19,6 +19,9 @@ seaborn = "^0.13.2"
 folium = "^0.17.0"
 wget = "^3.2"
 dash = "^2.17.1"
+llvmlite = "^0.43.0"
+numba = "^0.60.0"
+shap = "^0.46.0"
 
 
 [tool.poetry.group.dev.dependencies]
